# sedbuilder

./: .gitignore  404.html  LICENSE  README.md  conftest.py  dev.env  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
credits/: index.html
development/: index.html
docs/: api.md  credits.md  development.md  index.md
search/: search_index.json
sedbuilder/: __init__.py  _endpoints.py  _schemas.py  requests.py  schemas.py  utils.py
tests/: example.json  fetch_fixtures.py  fetch_test_data.py  test_catalogs.py  test_catalogs_from_json.py  test_get_data.py  test_get_data_from_json.py  test_response_conversions.py  test_response_parsing.py  test_smoke.py
tests/data/: 0d00000_90d00000_northpole.json  128d83606_m45d17643_velapulsar.json  161d25000_58d00000_lockmanhole.json  166d11381_38d20883_mrk421.json  201d36506_m43d01911_centaurusa.json  266d41501_m29d00611_galacticcenter.json  299d59031_35d20160_cygnusx1.json  329d71693_m30d22558_pks2155304.json  343d49061_16d14821_3c4543.json  83d63240_22d01740_crabnebula.json  README.md  catalogs.json
tests/fixtures/catalogs/: catalogs.json
tests/fixtures/getData/: 0d00000_90d00000_northpole.json  128d83606_m45d17643_velapulsar.json  161d25000_58d00000_lockmanhole.json  166d11381_38d20883_mrk421.json  201d36506_m43d01911_centaurusa.json  266d41501_m29d00611_sgra.json  299d59031_35d20160_cygnusx1.json  329d71693_m30d22558_pks2155304.json  343d49061_16d14821_3c4543.json  83d63240_22d01740_crabnebula.json
tests/fixtures/nameresolver/: 3c_4543_ssdc0_simbad0_ned1.json  3c_4543_ssdc0_simbad1_ned0.json  3c_4543_ssdc0_simbad1_ned1.json  3c_4543_ssdc1_simbad0_ned0.json  3c_4543_ssdc1_simbad0_ned1.json  3c_4543_ssdc1_simbad1_ned0.json  3c_4543_ssdc1_simbad1_ned1.json  centaurus_a_ssdc1_simbad1_ned1.json  crab_nebula_ssdc1_simbad1_ned1.json  cygnus_x1_ssdc1_simbad1_ned1.json  lockman_hole_ssdc1_simbad1_ned1.json  mrk_421_ssdc1_simbad1_ned1.json  pks_2155304_ssdc1_simbad1_ned1.json  sgr_a_ssdc1_simbad1_ned1.json  vela_pulsar_ssdc1_simbad1_ned1.json
