[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sedbuilder"
description = "A client to the ASI-SSDC's SED Builder API. "
keywords = ["astrophysics", "astronomy", "ssdc"]
version = "0.1.0"
authors = [
    { name="Giuseppe Dilillo", email="peppedilillo@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy",
    "httpx",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pyinstrument",
    "black",
    "isort",
    "ipython",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]