[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssdc-sedbuilder"
description = "A client to the ASI-SSDC's SED Builder API."
keywords = ["astrophysics", "astronomy", "ssdc"]
version = "1.1.3"
authors = [
    { name="Giuseppe Dilillo", email="peppedilillo@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy~=7.0",
    "httpx",
    "pydantic",
]

[tool.hatch.build.targets.wheel]
packages = ["sedbuilder"]

[project.urls]
Homepage = "https://github.com/peppedilillo/sedbuilder"
Documentation = "https://peppedilillo.github.io/sedbuilder/"
Repository = "https://github.com/peppedilillo/sedbuilder"
Issues = "https://github.com/peppedilillo/sedbuilder/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pyinstrument",
    "black",
    "isort",
    "ipython",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests requiring live server access (run with --smoke)",
]
